--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 Flask==1.1.1
-git+https://github.com/todaysday/notion-py 
+-e git+https://github.com/Etcetera-Agency/notion-py@master#egg=notion
 pytz
